    We should not create a new template symbols file, because the output
    might change (different sorting order for example) relative to the
    original. Closes: #773718
  * Do not leak kvm descriptors in start-stop-daemon on GNU/kFreeBSD systems.
    Based on a patch by Jeff Epler <jepler@unpythonic.net>. Closes: #779467

  * Perl modules:
    - Rename and deprecate Dpkg::Gettext _g function with new g_.
    - Assume in Dpkg::Arch that the abitable is always present, and bump
      libdpkg-perl Depends on dpkg to 1.16.3, the version introducing the file.
    - Remove support for GCC_TARGET environment variable from Dpkg::Shlibs.
      This was a temporary workaround for very old gcc toolchains. See #453267.
    - Prefer multiarch paths to multilib ones in Dpkg::Shlibs.
      Thanks to Helmut Grohne <helmut@subdivi.de>. Closes: #772184
    - Enable sub-second timestamps in Dpkg::Source::Patch by using Time::HiRes.
    - Use TMPDIR instead of manually setting DIR on tempfile() call in
      Dpkg::Source::Package::V2.
    - Switch Dpkg::Checksums from using checksum programs to the more portable
      Digest modules. Obsolete the 'program' property, and add a 'name' one.
    - Add support for $DEFAULT_TEXT_DOMAIN to Dpkg::Gettext, so that the Dpkg
      perl modules can always produce localized messages.
  * Test suite:
    - Check perl code compilation, warnings and strictness.
    - Fix dpkg-divert unit test to work on BSD «rm -rf» that cannot traverse
      directories with mode 000.
    - Fix dpkg-divert unit test to work when there is no /dev/full.
  * Build system:
    - Bump gettext version to 0.19:
      + Use --add-location=file in msgmerge and xgettext commands.
      + Use --porefs=noline for po4a command.
    - Wrap file references in man page PO files with po4a --porefs=wrap.
    - Fix support for cross-building dpkg:
      + Assume a working C99 snprintf on SUS >= v3.
      + Do not try to run the va_copy configure check, just check that the