@@ -58,6 +58,9 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     original. Closes: #773718
   * Do not leak kvm descriptors in start-stop-daemon on GNU/kFreeBSD systems.
     Based on a patch by Jeff Epler <jepler@unpythonic.net>. Closes: #779467
+  * Switch start-stop-daemon to use a monotonic clock if available. This
+    makes the timeout checks resilient to abrupt system clock changes.
+    Suggested by Jose M Calhariz <jose.calhariz@hds.com>. Closes: #783014
 
   * Perl modules:
     - Rename and deprecate Dpkg::Gettext _g function with new g_.
